Refix Bug 623985 - Line break on the "free download" button
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk@80594 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/content.css
+++ b/style/covehead/content.css
@@ -349,7 +349,11 @@ ul.home-download li a.download-link span.download-info em {
     position: absolute;
     right: 25px;
     top: 85px;
-	z-index: 9;
+    z-index: 9;
+}
+
+#download.top-right  ul.home-download {
+    width: auto;
 }
 
 * html #download ul.home-download {
